# gigante-clon

./: Cargo.toml  README.md  Rocket.toml  config.js  index.js  package-lock.json  package.json  settings.json
src/: index.ts
src/utils/: func.ts
